<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <TextView
        android:id="@+id/termsAndConditionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/termsAndConditions" />

    <Button
        android:id="@+id/readTermsAndConditonsButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_button"
        android:onClick="readTermsAndConditions"
        android:text="@string/readTermsAndConditionsButton"
        android:textColor="#FFFFFF" />

    <!--
         <TextView
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="200dp"
        android:text="@string/agree" />
    -->

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:id="@+id/agreeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="195dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/agree" />

        <RadioButton
            android:id="@+id/disagreeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/disagree" />
    </RadioGroup>

    <!--
         <TextView
        android:id="@+id/disagree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="250dp"
        android:text="@string/disagree" />
    -->


    <!--
    <Button
        android:id="@+id/agree"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/agree_button"
        android:onClick="readTermsAndConditions"
        android:text="@string/agree"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/disagree"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/disagree_button"
        android:onClick="readTermsAndConditions"
        android:text="@string/disagree"
        android:textColor="#FFFFFF" />
    -->

</RelativeLayout>